apps/imggen/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imggen-server
  namespace: imggen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imggen-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: imggen-server
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: server
          image: amerenda/imggen:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
