apps/imggen/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imggen-server
  namespace: imggen
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: imggen.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imggen-server
                port:
                  number: 8000
  tls:
    - hosts:
        - imggen.amer.dev
      secretName: imggen-tls
